- TABLE_MODEL: jump_to_today only set if possible - TABLE_MODEL: query_info[‘jump_to_today’] set when jumped to today - NEW: grid better code - NEW: grid jump to today - NEW: grid styling - NEW: grid inactive order buttons when a filter is active - NEW: BUG… sorting of columns doesn’t work anymore…
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3446 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 9d60115a1577bb27f712570554204a3b7e8b060c
Former-commit-id: 9e394f5936b514a72ea6d191b4f8104cfde4e3fc
Former-commit-id: 8ff5076322402e752b04a4eb366a254b28562984 [formerly 79c46586b02944f6074720581807e0f39b99db1f]
Former-commit-id: cb2eb24c6f8eb755c63ffb1382b477d4c9ee5241

--- a/sys/__test/less/flexy-grid.less
+++ b/sys/__test/less/flexy-grid.less
@@ -5,9 +5,11 @@
 .flexy-grid .panel-heading input {padding-left:30px;}
 .flexy-grid .panel-heading .glyphicon {left:0;}
 .flexy-grid .panel-content {padding:0;}
-.flexy-grid .panel-footer {padding:2px;height:39px;}
+.flexy-grid .panel-footer {padding:2px 5px;height:39px;}
 .flexy-grid .flexy-grid-pagination {float:left;}
 .flexy-grid .pagination {margin:0;}
+.flexy-grid .button-jump-to-today {margin-left:.5rem;color:@brand-primary;text-transform:uppercase;}
+.flexy-grid .button-jump-to-today.btn-primary {color:@body-bg;}
 .flexy-grid .flexy-grid-stats {float:right;padding:7px 14px;}
 
 /* Scrollable table (panel) */
